[package]
name = "fumnet"
version = "0.1.0"
edition = "2021"
description = "Fumnet - authentication library for Ferdowsi University of Mashhad captive portal"
license = "MIT OR Apache-2.0" 
readme = "README.md"
repository = "https://github.com/hamidrezakp/fumnet-rs"
keywords = ["captive-portal", "fum", "ferdowsi", "network"]
categories = ["authentication"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
