[package]
name = "fumnet"
version = "0.2.1"
edition = "2021"
description = "Fumnet - authentication library for Ferdowsi University of Mashhad captive portal"
license = "MIT OR Apache-2.0" 
readme = "README.md"
repository = "https://github.com/hamidrezakp/fumnet-rs"
keywords = ["captive-portal", "fum", "ferdowsi", "network"]
categories = ["authentication"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
